Fix color contrast

--- a/app/globals.css
+++ b/app/globals.css
@@ -184,7 +184,7 @@ i {
 .IsItReadyDetails {
   font-weight: bold;
   margin-top: 5px;
-  color: #458ef7;
+  color: black;
 }
 
 .ProgressBar {
